Better eshell switch

--- a/emacs.org
+++ b/emacs.org
@@ -828,12 +828,12 @@ hijack =C-x m= as prefix key for personal bindings
   (interactive)
   (if (eq major-mode 'eshell-mode)
       (switch-to-buffer (other-buffer))
-    (let ((d (or (jw--vc-root-dir) (jw--pwd))))
+    (let ((vc-root (jw--vc-root-dir)))
       (eshell)
       (eshell-kill-input)
       (goto-char (point-max))
-      (unless (string= d (jw--pwd))
-        (insert (format "cd '%s'" d))
+      (when (and vc-root (not (string= vc-root (jw--pwd))))
+        (insert (format "cd '%s'" vc-root))
         (eshell-send-input)))))
 
 (define-key jw-keymap "e" 'eshell-dwim)
