--- a/emacs.org
+++ b/emacs.org
@@ -1,7 +1,7 @@
 * introduction
 ** getting started
 
-I prefer to clone this repository as =$HOME/emacs-config= and symlink it to =$HOME/.emacs.d`=
+I prefer to clone this repository as =$HOME/emacs-config= and symlink it to =$HOME/.emacs.d=
 #+BEGIN_SRC sh :tangle no
 git clone git@github.com:jwinder/emacs-config.git $HOME/emacs-config
 ln -s $HOME/emacs-config $HOME/.emacs.d
@@ -1071,6 +1071,14 @@ faster searching
 (helm-add-action-to-source "Ag in project `M-s a'" 'helm-projectile-projects-helm-projectile-ag helm-source-projectile-projects)
 (helm-projectile-define-key helm-projectile-projects-map (kbd "M-s a") #'helm-projectile-projects-helm-projectile-ag)
 (helm-projectile-define-key helm-projectile-projects-map (kbd "C-s") #'helm-projectile-projects-helm-projectile-ag) ;; hijack grep's keybinding
+#+END_SRC
+
+tmp fix until merged: https://github.com/bbatsov/helm-projectile/pull/66
+#+BEGIN_SRC emacs-lisp
+(defun helm-projectile-coerce-file (candidate)
+  (let ((helm-projectile-project-root (projectile-project-root)))
+    (with-current-buffer (helm-candidate-buffer)
+      (expand-file-name candidate helm-projectile-project-root))))
 #+END_SRC
 
 ** magit
