math-symbol binding was too easy to accidentally type, got in the way of work

--- a/emacs.org
+++ b/emacs.org
@@ -137,8 +137,7 @@ cat init.el
 (use-package docker
   :config (docker-global-mode t))
 
-(use-package xah-math-input
-  :config (global-xah-math-input-mode 1))
+(use-package xah-math-input)
 #+END_SRC
 
 *** languages
@@ -813,12 +812,14 @@ If the prefix arg is 4, then kill the comment on the current line."
 
 (global-set-key (kbd "C-M-\\") 'indent-region-or-buffer)
 
+(global-set-key (kbd "S-M-SPC") 'math-symbol-at-point)
+
 (define-key hs-minor-mode-map (kbd "C-c @ <left>") 'hs-hide-block)
 (define-key hs-minor-mode-map (kbd "C-c @ <right>") 'hs-show-block)
 (define-key hs-minor-mode-map (kbd "C-c @ <up>") 'hs-hide-level)
 (define-key hs-minor-mode-map (kbd "C-c @ <down>") 'hs-show-all)
 
-(define-key xah-math-input-keymap (kbd "S-SPC") 'math-symbol-at-point)
+
 #+END_SRC
 
 hijack =C-x m= as prefix key for personal bindings
